--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Wed Sep 22 02:58:07 2004  Tim Janik  <timj@gtk.org>
+
+	* bsetrack.c:
+	bse_track_context_create():
+	bse_track_context_dismiss(): enable poly voices not only for snets, but
+	also for waves supplied by the user.
+
 Wed Sep 22 02:13:59 2004  Tim Janik  <timj@gtk.org>
 
 	* bsessequencer.[hc]: rewrote and majorly simplified playback
