--- a/docs/beast.1.texi
+++ b/docs/beast.1.texi
@@ -33,18 +33,45 @@ beast -- Graphical program to simulate audio synthesis and compose music.
 	@beast follows the usual GNU command line syntax, with long options starting with two dashes (`-').
 
 @table @option
-@item ---devel
-	Enrich the GUI with hints usefull for (script) developers
-@item ---print-dir[@var{=RESOURCE}]
+@item ---skinrc[=@var{FILENAME}]
+	Read skin resources from @var{FILENAME}.
+@item ---print-dir[=@var{RESOURCE}]
 	Print the directory for a specific resource (e.g. `plugins' or `images').
 	Giving just @option{---print-dir} without an extra argument causes @beast
 	to print the list of available resources.
+@item ---devel
+	Enrich the GUI with hints usefull for (script) developers
 @item -h, ---help
 	Shows a brief help message.
 @item -v, ---version
 	Prints out @beast and component versions and file paths.
 @item ---display=@var{DISPLAY}
 	X server for the GUI; see @uref{man://1/X}.
+@item ---bse-latency=@var{USECONDS}
+	Set the allowed synthesis latency for @bse in milliseconds.
+@item ---bse-mixing-freq=@var{FREQUENCY}
+	Set the desired synthesis mixing frequency in Hz.
+@item ---bse-control-freq=@var{FREQUENCY}
+	Set the desired control frequency in Hz, this should be much smaller than the
+	synthesis mixing frequency to reduce CPU load. The default value of approximately
+	1000 Hz is usually a good choice.
+@item ---bse-pcm-driver @var{DRIVER-CONF}
+@item -p @var{DRIVER-CONF}
+	This options results in an attempt to open the PCM driver @var{DRIVER-CONF}
+	when playback is started.
+	Multiple options may be supplied to try a variety of drivers and
+	unless @var{DRIVER-CONF} is specified as `auto', only the drivers
+	listed by options are used.
+	Each @var{DRIVER-CONF} consists of a driver name and an optional comma
+	seperated list of arguments attached to the driver withan equal sign, e.g.:
+	@option{-p oss=/dev/dsp2,rw -p auto}
+@item ---bse-midi-driver @var{DRIVER-CONF}
+@item -m @var{DRIVER-CONF}
+	This option is similar to the @option{---bse-pcm-driver} option,
+	but applies to MIDI drivers and devices. It also may be specified multiple
+	times and features an `auto' driver.
+@item ---bse-driver-list
+	Produce a list of all available PCM and MIDI drivers and available devices.
 @end table
 
 	Development Options:
