--- a/docs/bsesh.1.texi
+++ b/docs/bsesh.1.texi
@@ -52,10 +52,35 @@ bsesh -- A Guile based scheme shell for @beast and @bse{}.
 	Prevent automated detection and playback of @file{.bse} file command line arguments.
 @item ---g-fatal-warnings
 	Make runtime warnings fatal (abort).
-@item ---help
+@item -h, ---help
 	Describe command line options and exit.
-@item ---version
+@item -v, ---version
 	Display version and exit.
+@item ---bse-latency=@var{USECONDS}
+	Set the allowed synthesis latency for @bse in milliseconds.
+@item ---bse-mixing-freq=@var{FREQUENCY}
+	Set the desired synthesis mixing frequency in Hz.
+@item ---bse-control-freq=@var{FREQUENCY}
+	Set the desired control frequency in Hz, this should be much smaller than the
+	synthesis mixing frequency to reduce CPU load. The default value of approximately
+	1000 Hz is usually a good choice.
+@item ---bse-pcm-driver @var{DRIVER-CONF}
+@item -p @var{DRIVER-CONF}
+	This options results in an attempt to open the PCM driver @var{DRIVER-CONF}
+	when playback is started.
+	Multiple options may be supplied to try a variety of drivers and
+	unless @var{DRIVER-CONF} is specified as `auto', only the drivers
+	listed by options are used.
+	Each @var{DRIVER-CONF} consists of a driver name and an optional comma
+	seperated list of arguments attached to the driver withan equal sign, e.g.:
+	@option{-p oss=/dev/dsp2,rw -p auto}
+@item ---bse-midi-driver @var{DRIVER-CONF}
+@item -m @var{DRIVER-CONF}
+	This option is similar to the @option{---bse-pcm-driver} option,
+	but applies to MIDI drivers and devices. It also may be specified multiple
+	times and features an `auto' driver.
+@item ---bse-driver-list
+	Produce a list of all available PCM and MIDI drivers and available devices.
 @end table
 
 	Guile Options:
