--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-24  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-09-21  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
