--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 FIXMES:	(release-critical)
-- update manual pages
+- implement sequencer underrun detection
+- provide auto-conection API for drivers, so that not its device list is tried, but the
+  devices meant for auto connection. (for alsa, that'd be just "default"
+- adapt pcm rates to rates provided by alsa
 - don't record samples to WAV file before *any* song is processed by sequencer
 - fix ssequencer super list length>1 for one song
 - bse_project_stop_playback: add nop job
