--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Mon Sep 27 01:09:39 2004  Tim Janik  <timj@gtk.org>
+
+	* bsepcmdevice-oss.c: fixed hardcoded n_channels=2 and a number of buglets.
+
 Sun Sep 26 06:00:46 2004  Tim Janik  <timj@gtk.org>
 
 	* bsedevice.c: fixed logic that collapses multiple 'auto' drivers.
