--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Sep 27 06:46:10 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/Makefile.am:
+	* beast-gtk/bstutils.c: collect debugging keys from C++ files
+	and sort the list of debugging keys.
+
 Fri Sep 24 09:12:48 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: provide $bsedriverdir.
