--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,8 @@
+Tue Sep 28 00:38:31 2004  Tim Janik  <timj@gtk.org>
+
+	* bsemididevice-alsa.h: 
+	* bsemididevice-alsa.c: object skeleton for a an ALSA MIDI driver.
+
 Mon Sep 27 09:48:16 2004  Tim Janik  <timj@gtk.org>
 
 	* bsepcmdevice-alsa.[hc]: implemented ALSA pcm driver plugin,
