--- a/TODO
+++ b/TODO
@@ -18,6 +18,7 @@ FIXMES:	(release-critical)
   (not having /dev/midi gets really annoying)
   or disable "/dev/midi": no such device dialog
 TODO:
+- davsyndrum needs gate-out (or done)
 - beast --debug=all --no-debug=comport doesn't disable comport messages
 - revisit bse_object_lock()
 - rename cast() to convert()
