preliminary implementation of read handler.
Tue Sep 28 01:45:21 2004  Tim Janik  <timj@gtk.org>

        * bsemididevice-alsa.c: preliminary implementation of read handler.

svn path=/trunk/; revision=2627

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:	(release-critical)
+- add BseMidiDecoder *midi_decoder to midi handles
 - midi synthesizer does not work anymore (anable multi-voices like in tracks?)
 - pcmmodule input->reset() should queue a server check for !pcm-handle->readable which then throws a warning (dialog)
 - a single CSynth with auto-activate and without a song dosn't keep playback
