--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep 28 01:45:21 2004  Tim Janik  <timj@gtk.org>
+
+	* bsemididevice-alsa.c: preliminary implementation of read handler.
+
 Tue Sep 28 00:57:57 2004  Tim Janik  <timj@gtk.org>
 
 	* bsepcmdevice-alsa.c (alsa_device_write): issue dummy reads instead of
