--- a/TODO
+++ b/TODO
@@ -21,6 +21,7 @@ FIXMES:	(release-critical)
 - update gtk/glib dependency to 2.4 in README and configure.in
 TODO:
 - add -n <nicelevel> and -N for not nicing to beast and bsesh launchers
+- add executable versioning to sfidl 
 - davsyndrum needs gate-out (or done)
 - beast --debug=all --no-debug=comport doesn't disable comport messages
 - revisit bse_object_lock()
